# Flight-Data-Quality-Pipeline-CLI-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw/: flights_sample.csv
src/flight_pipeline/: cli.py  io.py  quality.py  schema.py  transform.py
tests/: test_quality.py  test_schema.py  test_transform.py
