[project]
name = "flight-data-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pandera>=0.20",
  "typer>=0.12",
  "rich>=13.7",
  "pyarrow>=14",
]

[project.scripts]
flight-pipeline = "flight_pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]